disain/styles/components/_tab-login.scss
.c-tab-login {
  margin-bottom: 30px;
  @media (max-width: $breakpoint-mobile) {
    margin-bottom: 20px;
  }
  &__header {
    margin-bottom: 20px;
    @media (max-width: $breakpoint-mobile) {
      margin-bottom: 0;
    }
  }
  &__nav {
    display: flex;
    margin: 0 -7.5px;
    @media (max-width: $breakpoint-mobile) {
      flex-direction: column;
    }
  }
  &__nav-item {
    width: 20%;
    padding: 0 7.5px;
    @media (max-width: $breakpoint-mobile) {
      width: 100%;
      margin-top: 10px;
      position: relative;
    }
    &.is-active {
      .c-tab-login__nav-link {
        @media (max-width: $breakpoint-mobile) {
          justify-content: center;
          margin: -15px -15px 0 -15px;
          border-radius: 0;
          background-color: #344255;
          color: #fff;
        }
      }
      .c-tab-login__nav-back-link {
        @media (max-width: $breakpoint-mobile) {
          display: block;
        }
      }
    }
  }
  &__nav-link {
    display: flex;
    justify-content: center;
    height: 50px;
    padding: 0 10px;
    color: #5d6071;
    text-decoration: none;
    border-radius: 8px;
    background-color: #fff;
    @media (max-width: $breakpoint-mobile) {
      justify-content: flex-start;
      height: 60px;
      padding: 0 15px;
      font-size: 18px;
      font-weight: 500;
    }
    .icon {
      display: flex;
      justify-content: center;
      align-items: center;
      margin-right: 10px;
      @media (max-width: $breakpoint-mobile) {
        width: 50px;
      }
    }
    &.is-active,
    &:hover {
      text-decoration: none;
      color: #fff;
      background-color: #5d6071;
      @media (max-width: $breakpoint-mobile) {
        color: #344255;
        background-color: #fff;
      }
    }
    &--eu {
      color: #f2f2f2;
      background-color: #5d6071;
      &.is-active,
      &:hover {
        color: #fff;
        background-color: #34394c;
      }
    }
  }
  &__nav-label {
    display: flex;
    align-items: center;
    white-space: nowrap;
    font-size: 20px;
  }
  &__nav-back-link {
    display: none;
    width: 60px;
    height: 60px;
    position: absolute;
    left: -15px;
    top: -15px;
    bottom: 0;
    z-index: 2;
    cursor: pointer;
    &:before {
      content: "";
      display: block;
      width: 0;
      height: 0;
      border-top: 10px solid transparent;
      border-bottom: 10px solid transparent;
      border-right: 10px solid #fff;
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%,-50%);
    }
  }
  &__content {
    display: none;
    &.is-active {
      display: block;
      @media (max-width: $breakpoint-mobile) {
        display: none;
      }
    }
  }
  &__warning {
      display: none;
      &.is-active {
        display: block;
        @media (max-width: $breakpoint-mobile) {
          display: none;
        }
      }
  }
  &__static-warning {
      display: none;
        @media (max-width: $breakpoint-mobile) {
          display: block;
        }
  }
  &__warning-item {
    font-weight: bold;
    white-space: pre-line;
  }
  &__content-wrap {
    display: flex;
    background-color: #fff;
    border-radius: 8px;
    @media (max-width: $breakpoint-mobile) {
      display: block;
      margin-left: -15px;
      margin-right: -15px;
      border-radius: 0;
    }
  }
  &__content-icon {
    flex: 0 0 auto;
    width: 190px;
    padding: 30px 0;
    text-align: center;
    .icon {
      width: auto;
      height: auto;
      max-width: 160px;
      max-height: 100px;
    }
    @media (max-width: $breakpoint-mobile) {
      display: none;
    }
  }
  &__content-text, &__content-wait {
    flex: 1 1 auto;
    max-width: max-content;
    padding: 40px 40px 40px 0;
    @media (max-width: $breakpoint-mobile) {
      padding: 20px 15px 0 15px;
    }
    h2 {
      margin-bottom: 25px;
      font-size: 30px;
      color: #34394c;
      font-weight: 400;
      @media (max-width: $breakpoint-mobile) {
        font-size: 20px;
        margin-bottom: 20px;
        font-weight: 500;
      }
    }
    p {
      margin-bottom: 25px;
      @media (max-width: $breakpoint-mobile) {
        margin-bottom: 20px;
      }
    }
  }
  &__qr-code-card {
    @media (max-width: $breakpoint-mobile) {
      padding: 0;
      text-align: left;
    }
    @media (min-width: $breakpoint-mobile + 1) {
      padding: 24px;
      text-align: center;
      border: 1px solid #ccc;
      border-radius: 8px;
      margin-right: 150px;
    }
  }
  &__qr-code {
    $padding: 8px;
    $qr-version: 11;
    $qr-module-size: 6px;

    $qr-modules: 17 + (4 * $qr-version);
    $max-width: $qr-modules * $qr-module-size + 2 * $padding;
    padding: $padding;
    background-color: #fff;
    margin-bottom: 25px;
    display: inline-flex;
    // Use `unquote` to use run-time CSS `min` function instead of SCSS compile-time `min` function.
    width: unquote('min(#{$max-width}, 100%)');
    justify-content: center;
    align-content: center;
    aspect-ratio: 1;
  }
  &__qr-code svg {
    display: block;
  }
  &__qr-code .loadersmall {
    margin: 0;
  }
  &__footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 30px;
    @media (max-width: $breakpoint-mobile) {
      display: none;
    }
  }
}

